# paperless_email_processor

./: .dockerignore  .gitignore  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  env.example  main.py  pyproject.toml  test_main.py
.github/workflows/: test_code.yml
