[project]
name = "paperless-email-processor"
version = "0.1.1"
description = "A processor for files to be send to paperless or email"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["environs>=14.2.0", "requests>=2.32.4"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
    "types-requests>=2.32.4.20250913",
]
